--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,7 @@
     <string name="home_nav_find">发现</string>
     <string name="home_nav_message">消息</string>
     <string name="home_nav_me">我的</string>
+    <string name="home_nav_setting">更多</string>
 
     <!-- 登录 -->
     <string name="login_register">注册</string>
